# minecraft-bce

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  pch.hpp
src/client/: Global.hpp  client-pch.hpp  main.cpp
src/client/app/: ClientApp.cpp  ClientApp.hpp
src/common/: Interfaces.hpp  pch.hpp
src/server/api/: ServerHandler.cpp  ServerHandler.hpp
src/server/console-app/: Global.hpp  ServerApp.cpp  ServerApp.hpp  main.cpp  server-pch.hpp
